@@ -1,5 +1,6 @@
 === (ongoing) ===
 
+- added TagManager
 
 === 0.2 ===
 
